Fri Jan 06 12:55:37 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Thu Jan 05 16:12:00 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Oops, remove hack left over from testing.

Thu Jan 05 16:09:06 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: Add sanity check for MS Windows that "find" is
	  Unix-like find, not MSDOS-like.

Thu Jan 05 04:27:29 GMT 2006  Olly Betts <olly@survex.com>

	* INSTALL,PLATFORMS,README: Updated.

Mon Dec 19 12:53:38 GMT 2005  Olly Betts <olly@survex.com>

	* AUTHORS,PLATFORMS: Add success report for Fedora Core 4.

Mon Dec 19 12:52:55 GMT 2005  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Improve a couple of documentation
	  comments.

Sun Dec 11 01:33:58 GMT 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix handling of "+" terms in a query
	  when the default query operator is AND.
	* tests/queryparsertest.cc: Add regression test.

Fri Dec 09 05:54:33 GMT 2005  Olly Betts <olly@survex.com>

	* languages/api.cc: Check for malloc and calloc failing to allocate
	  memory and throw an exception.  Richard has fix this upstream in
	  snowball, so this is a temporary fix until we import a new version
	  of snowball.

Fri Dec 09 02:15:38 GMT 2005  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Added assertions that the internal ptr isn't NULL
	  to ESet::end() and ESet::get_description().

Fri Dec 09 02:14:13 GMT 2005  Olly Betts <olly@survex.com>

	* HACKING: Note platforms valgrind now has solid support for; Improve
	  phrasing in a few places.

Thu Dec 08 23:13:09 GMT 2005  Olly Betts <olly@survex.com>

	* INSTALL: Update URL for stlport to sourceforge site, which seems to
	  be where the action is now.

Thu Dec 08 04:13:11 GMT 2005  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Fix testsuite harness to work with valgrind
	  on 64 bit platforms (it's not documented, but VALGRIND_COUNT_LEAKS