@@ -1,7 +1,7 @@
 /* queryparser.cc: The non-lemon-generated parts of the QueryParser
  * class.
  *
- * Copyright (C) 2005 Olly Betts
+ * Copyright (C) 2005,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -15,7 +15,7 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
  */
 
@@ -98,14 +98,14 @@ QueryParser::parse_query(const string &query_string, unsigned flags)
 void
 QueryParser::add_prefix(const std::string &field, const std::string &prefix)
 {
-    internal->prefixes.insert(make_pair(field, make_pair(false, prefix)));
+    internal->prefixes.insert(make_pair(field, BoolAndString(false, prefix)));
 }
 
 void
 QueryParser::add_boolean_prefix(const std::string &field,
 				const std::string &prefix)
 {
-    internal->prefixes.insert(make_pair(field, make_pair(true, prefix)));
+    internal->prefixes.insert(make_pair(field, BoolAndString(true, prefix)));
 }
 
 TermIterator
