@@ -1,7 +1,7 @@
 %include {
 /* queryparser.lemony: build a Xapian::Query object from a user query string.
  *
- * Copyright (C) 2004,2005 Olly Betts
+ * Copyright (C) 2004,2005,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -278,18 +278,18 @@ QueryParser::Internal::parse_query(const string &qs, unsigned flags)
 		    string field;
 		    p = it;
 		    while (*p != ':') field += *p++;
-		    map<string, pair<bool, string> >::const_iterator f;
+		    map<string, BoolAndString>::const_iterator f;
 		    f = prefixes.find(field);
 		    if (f != prefixes.end()) {
 			// Can't boolean prefix a subexpression or phrase.
-			bool boolean_filter = f->second.first;
+			bool boolean_filter = f->second.flag;
 			if (!boolean_filter || C_isalnum(ch)) {
 			    it = p;
 			    ++it;
 			    if (!C_isalnum(ch)) {
 				newprev = ch;
 				++it;
-				state.push_prefix(f->second.second);
+				state.push_prefix(f->second.str);
 				// Prefixed sub-expr: title:(fast NEAR food)
 				if (ch == '(') {
 				    Parse(pParser, PREFIX_BRA, NULL, &state);
@@ -300,7 +300,7 @@ QueryParser::Internal::parse_query(const string &qs, unsigned flags)
 				mode = IN_QUOTES;
 				continue;
 			    }
-			    prefix = f->second.second;
+			    prefix = f->second.str;
 			    if (boolean_filter) {
 				if (prefix_needs_colon(prefix, *it))
 				    prefix += ':';
